--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -88,6 +88,7 @@
         padding: 0;
         line-height: 1;
         text-transform: uppercase;
+        font-weight: normal;
         .font-size-responsive(34px, 36px, 38px, 40px, 42px, 44px, 48px, 48px);
     }
 
@@ -185,38 +186,30 @@
 
 	}
 
-    .first-line-bold {
-        font-weight: @font-weight;
-
-        &:first-line {
-            font-weight: @font-weight-bold;
-        }
-    }
-
     .hl-1,
     .hl1 {
-        .font-size-responsive(20px,24px,28px,32px,60px,60px,80px,80px);
+        .font-size-responsive(20px,24px,28px,42px,48px,54px,60px,60px);
         font-weight: @font-weight;
         line-height: 1.25;
     }
 
     .hl-2,
     .hl2 {
-        .font-size-responsive(20px,24px,28px,32px,60px,60px,80px,80px);
+        .font-size-responsive(20px,24px,28px,36px,42px,48px,54px,60px);
         font-weight: @font-weight;
         line-height: 1.25;
     }
 
     .hl-3,
     .hl3 {
-        .font-size-responsive(20px,24px,28px,32px,40px,40px,60px,60px);
+        .font-size-responsive(20px,24px,28px,32px,36px,40px,44px,48px);
         font-weight: @font-weight;
         line-height: 1.25;
     }
 
     .hl-4,
     .hl4 {
-        .font-size-responsive(20px,24px,28px,32px,36px,34px,40px,40px);
+        .font-size-responsive(20px,24px,28px,32px,36px,40px,44px,48px);
         font-weight: @font-weight;
         line-height: 1.25;
     }
