--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,7 @@ h6 {
   padding: 0;
   line-height: 1;
   text-transform: uppercase;
+  font-weight: normal;
   font-size: 34px;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
@@ -295,12 +296,6 @@ h6 {
   -moz-box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.15);
   box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.15);
 }
-.first-line-bold {
-  font-weight: 400;
-}
-.first-line-bold:first-line {
-  font-weight: 700;
-}
 .hl-1,
 .hl1 {
   font-size: 20px;
@@ -328,37 +323,37 @@ h6 {
 @media all and (min-width: 1024px) and (max-width: 1280px) {
   .hl-1,
   .hl1 {
-    font-size: 32px;
+    font-size: 42px;
   }
 }
 @media all and (min-width: 1280px) and (max-width: 1468px) {
   .hl-1,
   .hl1 {
-    font-size: 60px;
+    font-size: 48px;
   }
 }
 @media all and (min-width: 1468px) and (max-width: 1680px) {
   .hl-1,
   .hl1 {
-    font-size: 60px;
+    font-size: 54px;
   }
 }
 @media all and (min-width: 1680px) and (max-width: 1920px) {
   .hl-1,
   .hl1 {
-    font-size: 80px;
+    font-size: 60px;
   }
 }
 @media all and (min-width: 1920px) {
   .hl-1,
   .hl1 {
-    font-size: 80px;
+    font-size: 60px;
   }
 }
 @media all and (min-width: 2200px) {
   .hl-1,
   .hl1 {
-    font-size: 80px;
+    font-size: 60px;
   }
 }
 .hl-2,
@@ -388,37 +383,37 @@ h6 {
 @media all and (min-width: 1024px) and (max-width: 1280px) {
   .hl-2,
   .hl2 {
-    font-size: 32px;
+    font-size: 36px;
   }
 }
 @media all and (min-width: 1280px) and (max-width: 1468px) {
   .hl-2,
   .hl2 {
-    font-size: 60px;
+    font-size: 42px;
   }
 }
 @media all and (min-width: 1468px) and (max-width: 1680px) {
   .hl-2,
   .hl2 {
-    font-size: 60px;
+    font-size: 48px;
   }
 }
 @media all and (min-width: 1680px) and (max-width: 1920px) {
   .hl-2,
   .hl2 {
-    font-size: 80px;
+    font-size: 54px;
   }
 }
 @media all and (min-width: 1920px) {
   .hl-2,
   .hl2 {
-    font-size: 80px;
+    font-size: 54px;
   }
 }
 @media all and (min-width: 2200px) {
   .hl-2,
   .hl2 {
-    font-size: 80px;
+    font-size: 60px;
   }
 }
 .hl-3,
@@ -454,7 +449,7 @@ h6 {
 @media all and (min-width: 1280px) and (max-width: 1468px) {
   .hl-3,
   .hl3 {
-    font-size: 40px;
+    font-size: 36px;
   }
 }
 @media all and (min-width: 1468px) and (max-width: 1680px) {
@@ -466,19 +461,19 @@ h6 {
 @media all and (min-width: 1680px) and (max-width: 1920px) {
   .hl-3,
   .hl3 {
-    font-size: 60px;
+    font-size: 44px;
   }
 }
 @media all and (min-width: 1920px) {
   .hl-3,
   .hl3 {
-    font-size: 60px;
+    font-size: 44px;
   }
 }
 @media all and (min-width: 2200px) {
   .hl-3,
   .hl3 {
-    font-size: 60px;
+    font-size: 48px;
   }
 }
 .hl-4,
@@ -520,25 +515,25 @@ h6 {
 @media all and (min-width: 1468px) and (max-width: 1680px) {
   .hl-4,
   .hl4 {
-    font-size: 34px;
+    font-size: 40px;
   }
 }
 @media all and (min-width: 1680px) and (max-width: 1920px) {
   .hl-4,
   .hl4 {
-    font-size: 40px;
+    font-size: 44px;
   }
 }
 @media all and (min-width: 1920px) {
   .hl-4,
   .hl4 {
-    font-size: 40px;
+    font-size: 44px;
   }
 }
 @media all and (min-width: 2200px) {
   .hl-4,
   .hl4 {
-    font-size: 40px;
+    font-size: 48px;
   }
 }
 .p,
@@ -831,8 +826,8 @@ footer#main-footer:before {
   width: 100%;
   height: 100%;
   opacity: 0.5;
-  background-image: url("../img/module-content-repeater.svg");
-  background-size: contain;
+  background-image: url("../img/gutter-endless.svg");
+  background-size: 400px 400px;
   background-repeat: repeat;
 }
 footer#main-footer a {
@@ -959,12 +954,6 @@ body.woocommerce-checkout .woocommerce {
   background-position: bottom;
   z-index: 0;
 }
-.em-hero-simple .hl-1 {
-  font-weight: 400;
-}
-.em-hero-simple .hl-1:first-line {
-  font-weight: 700;
-}
 .em-hero-simple .desc p {
   margin: 0;
 }
@@ -1039,6 +1028,7 @@ body.woocommerce-checkout .woocommerce {
 }
 .em-content-repeater .row {
   position: relative;
+  margin-bottom: 50px;
 }
 .em-content-repeater .row:last-child {
   margin-bottom: 0;
@@ -1046,21 +1036,11 @@ body.woocommerce-checkout .woocommerce {
 @media all and (min-width: 769px) {
   .em-content-repeater .row {
     margin-bottom: 100px;
-    left: 30px;
-    top: 30px;
   }
 }
 .em-content-repeater .row .item {
   order: 1;
   position: relative;
-}
-@media all and (min-width: 769px) {
-  .em-content-repeater .row .item {
-    padding: 0;
-  }
-  .em-content-repeater .row .item:first-child {
-    left: 30px;
-  }
 }
 @media all and (min-width: 769px) {
   .em-content-repeater .row .item.order-2 {
@@ -1074,9 +1054,9 @@ body.woocommerce-checkout .woocommerce {
   .em-content-repeater .row .item .trademark {
     position: absolute;
     bottom: -50px;
-    left: 80%;
-    width: 100px;
-    height: 100px;
+    left: 100%;
+    width: 150px;
+    height: 150px;
     z-index: 10;
     display: block;
     transform: translateX(-150%);
@@ -1094,7 +1074,12 @@ body.woocommerce-checkout .woocommerce {
   margin-bottom: 20px;
 }
 .em-content-repeater .row .item-text {
-  padding: 30px;
+  padding: 20px;
+}
+@media all and (min-width: 769px) {
+  .em-content-repeater .row .item-text {
+    padding: 50px;
+  }
 }
 @media all and (max-width: 768px) {
   .em-content-repeater .row .item-image {
@@ -1102,6 +1087,9 @@ body.woocommerce-checkout .woocommerce {
   }
 }
 @media all and (min-width: 769px) {
+  .em-content-repeater .row .item-image {
+    left: 30px;
+  }
   .em-content-repeater .row .item-image > figure {
     position: relative;
     top: -30px;
@@ -1110,37 +1098,25 @@ body.woocommerce-checkout .woocommerce {
   }
   .em-content-repeater .row .item-image:before {
     content: "";
-    width: calc(100% + 30px);
-    height: calc(100% + 30px);
+    width: 100%;
+    height: 100%;
     position: absolute;
-    background-image: url("../img/module-content-repeater.svg");
-    background-size: 26%;
+    background-image: url("../img/gutter-endless.svg");
     background-repeat: repeat;
+    background-size: 400px 400px;
+    transform: rotate(180deg);
     -webkit-transition: all 0.6s ease;
     transition: all 0.6s ease;
-    bottom: 0;
-    right: 0;
-    background-position: bottom right;
   }
-  .em-content-repeater .row.flipped {
-    left: -30px;
-    top: 0;
-  }
-  .em-content-repeater .row.flipped .item:first-child {
+  .em-content-repeater .row.flipped .item-image {
     left: -30px;
   }
   .em-content-repeater .row.flipped .item-image > figure {
-    top: auto;
-    left: auto;
-    bottom: -30px;
-    right: -30px;
+    top: 30px;
+    left: 30px;
   }
   .em-content-repeater .row.flipped .item-image:before {
-    top: 0;
-    left: 0;
-    bottom: auto;
-    right: auto;
-    background-position: top left;
+    transform: rotate(0);
   }
 }
 body.page-template-tpl-about #content p {
