--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -63,8 +63,8 @@
 				left: 0;
 				width: 100%;
 				height: 100%;
-  				background-image: url("../../../../assets/img/bali-background.svg");
-  				background-size: cover;
+  				background-image: url("../../../../assets/img/gutter-endless.svg");
+            	background-size: 400px 400px;
   				background-repeat: repeat;
   				z-index: -5;
 			}
@@ -197,7 +197,7 @@
 					right: 0;
 					width: 300px;
 					height: 200px;
-	  				background-image: url("../../../../assets/img/bali-background-3.svg");
+	  				background-image: url("../../../../assets/img/kaffeefleck.svg");
 	  				background-size: cover;
 	  				background-repeat: no-repeat;
 	  				z-index: 2;
@@ -220,8 +220,8 @@
 						left: 0;
 						width: 100%;
 						height: 100%;
-		  				background-image: url("../../../../assets/img/bali-background.svg");
-		  				background-size: cover;
+		  				background-image: url("../../../../assets/img/gutter-endless.svg");
+            			background-size: 400px 400px;
 		  				background-repeat: repeat;
 					}
 				}
@@ -253,8 +253,8 @@
 						left: 0;
 						width: 100%;
 						height: 100%;
-		  				background-image: url("../../../../assets/img/bali-background.svg");
-		  				background-size: cover;
+		  				background-image: url("../../../../assets/img/gutter-endless.svg");
+            			background-size: 400px 400px;
 		  				background-repeat: repeat;
 					}
 				}
@@ -290,6 +290,7 @@
 		#related-products { 
 
 			h4 {
+        		.font-size-responsive(20px,24px,28px,40px,40px,40px,60px,60px);
 				text-align: center;
 				margin-bottom: 50px;
 			}
@@ -347,8 +348,8 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background-image: url("../../../../assets/img/bali-background.svg");
-			background-size: cover;
+			background-image: url("../../../../assets/img/gutter-endless.svg");
+            background-size: 400px 400px;
 			background-repeat: repeat;
 			-webkit-transition: all .6s ease;
 			transition: all .6s ease;
