--- a/assets/css/style-lp-1.less
+++ b/assets/css/style-lp-1.less
@@ -13,6 +13,7 @@
 
 	body:not(.scrolled) {
 		header#main-header {
+			box-shadow: none;
 			background-color: transparent;
 
 
@@ -105,9 +106,13 @@
 			}
 		}
 
+        .inner-full {
+            padding-bottom: 120px;
+        }
+
 		.inner-wrapper {
-			top: 50px;
 			transform: translate(0);
+			top: 50px;
 		}
 
 		.hero-teaser {
@@ -157,5 +162,52 @@
 	#products {
 		h2 {
 			margin-bottom: 50px;
+		}
+
+		.wrapper-1200 {
+			&:after,
+			&:before {
+				display: table;
+				content: "";
+				clear: both;
+			}
+
+			& > .btn-line-left {
+				margin-top: 20px;
+				margin-bottom: 40px;
+			}
+		}
+	}
+
+////////////////////////////////////////////////////////////////////////////////////
+// INSTAGRAM SECTION
+////////////////////////////////////////////////////////////////////////////////////
+
+	#instagram {
+		position: relative;
+		background-image: url(../img/bali-background-4.jpg);
+		background-size: cover;
+		z-index: -10;
+
+		&:before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 200px;
+			background-image: linear-gradient(to top, rgba(255, 255, 255, 0), #ffffff);
+			z-index: -5
+		}
+
+		&:after {
+			content: "";
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			height: 50px;
+			background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
+			z-index: -5;
 		}
 	}
