--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -19,6 +19,7 @@
         line-height: 1.6;
         color: #033142;
         font-style: normal;
+        font-variant: lining-nums;
         .font-size-responsive(14px, 14px, 14px, 16px, 16px, 16px, 18px, 18px);
     }
 
@@ -120,6 +121,7 @@
     header#main-header {
         background-color: #fff;
         width: 1200px;
+        box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.15);
 
         nav#main-nav {
             ul {
@@ -128,6 +130,7 @@
                         color: #033142;
                         font-size: 18px;
                         padding: 22px 0;
+                        text-transform: uppercase;
 
                         &:hover {
                             color: #033142;
@@ -191,7 +194,6 @@
             }
 
             .cart-item-count {
-                font-family: sans-serif;
                 background: #033142;
             }
         }
@@ -394,7 +396,7 @@
 
     .em-hero-simple {
         position: relative;
-
+        
         &:after {
             content: "";
             position: absolute;
@@ -422,9 +424,6 @@
                 width: 1200px;
                 color: #fff;
                 text-align: center;
-
-                @media all and (min-width: @breakpoint4_mf) {
-                }
             }
         }
     }
@@ -466,6 +465,36 @@
 
             @media all and (min-width: @breakpoint3_mf) {
                 margin-bottom: 100px;
+
+            }
+
+            // Positions min 769
+            @media all and (min-width: @breakpoint3_mf) {
+                .item-image {
+                    left: 30px;
+
+                    & > figure {
+                        position: relative;
+                        top: -30px;
+                        left: -30px;
+                        z-index: 5;
+                    }
+                }
+
+                &.flipped {
+                    .item-image {
+                        left: -30px;
+
+                        & > figure {
+                            top: 30px;
+                            left: 30px;
+                        }
+
+                        &:before {
+                            transform: rotate(0);
+                        }
+                    }
+                }
             }
 
             .item {
@@ -520,19 +549,8 @@
                 @media all and (max-width: @breakpoint3) {
                     background: none !important;
                 }
-            }
 
-
-            @media all and (min-width: @breakpoint3_mf) {
-                .item-image {
-                    left: 30px;
-
-                    & > figure {
-                        position: relative;
-                        top: -30px;
-                        left: -30px;
-                        z-index: 5;
-                    }
+                @media all and (min-width: @breakpoint3_mf) {
 
                     &:before {
                         content: "";
@@ -547,28 +565,6 @@
                         transition: all 0.6s ease;
                     }
                 }
-
-                &.flipped {
-                    // left: -30px;
-                    // top: 0;
-
-                    .item-image {
-                        left: -30px;
-
-                        & > figure {
-                            top: 30px;
-                            left: 30px;
-                        }
-
-                        &:before {
-                            transform: rotate(0);
-                        }
-                    }
-
-                    .item-text {
-
-                    }
-                }
             }
         }
     }
@@ -579,10 +575,24 @@
 
     body.page-template-tpl-about {
         #content {
+            position: relative;
+
+            &:after {
+                position: absolute;
+                content: "";
+                height: 50px;
+                width: 2px;
+                left: 50%;
+                bottom: 0;
+                transform: translateX(-50%);
+                background-color: #000;
+            }
+
             p {
                 .font-size-responsive(18px, 20px, 22px, 24px, 26px, 28px, 30px, 32px);
                 line-height: 1.33;
                 text-align: center;
+                font-weight: 500;
             }
         }
 
@@ -616,9 +626,10 @@
         }
 
         .btn-line-left {
-            .font-size-responsive(14px, 14px, 14px, 16px, 16px, 16px, 18px, 20px);
+            .font-size-responsive(20px,24px,28px,28px,32px,32px,36px,36px);
 
             input[type="submit"] {
+                .font-size-responsive(20px,24px,28px,28px,32px,32px,36px,36px);
                 border: 0;
                 background-color: transparent;
                 color: #033142;
@@ -646,12 +657,37 @@
                 &.first-name,
                 &.last-name,
                 &.your-email,
-                &.your-number,
-                &.acceptance-privacy {
+                &.your-number{
                     -ms-flex: 0 0 50%;
                     flex: 0 0 50%;
                     max-width: 50%;
                 }
+            }
+        }
+
+        .col_privacy {
+            display: block;
+            position: relative;
+            min-height: 1px;
+            background-clip: content-box;
+            margin-bottom: 30px;
+            -webkit-box-flex: 0;
+            width: 100%;
+
+            @media all and (min-width: @breakpoint3_mf) {
+                -ms-flex: 0 0 50%;
+                flex: 0 0 50%;
+                max-width: 50%;
+            }
+
+            span.wpcf7-list-item {
+                margin: 0;
+            }
+
+            .acceptance-privacy {
+                width: auto;
+                display: inline-block;
+                margin-bottom: 0;
             }
         }
     }
