--- a/plugins/woocommerce/assets/css/style-wc-child.css
+++ b/plugins/woocommerce/assets/css/style-wc-child.css
@@ -1,3 +1,20 @@
+body.woocommerce #em-wc-container .woocommerce-variation-availability,
+body.woocommerce-page #em-wc-container .woocommerce-variation-availability {
+  display: none;
+}
+body.woocommerce #em-wc-container .woocommerce-variation-price,
+body.woocommerce-page #em-wc-container .woocommerce-variation-price {
+  margin-bottom: 20px;
+}
+body.woocommerce #em-wc-container .woocommerce-variation-price .woocommerce-price-suffix,
+body.woocommerce-page #em-wc-container .woocommerce-variation-price .woocommerce-price-suffix {
+  font-size: 12px !important;
+  opacity: 0.8;
+}
+body.woocommerce #em-wc-container .woocommerce-variation-price .woocommerce-price-suffix span,
+body.woocommerce-page #em-wc-container .woocommerce-variation-price .woocommerce-price-suffix span {
+  font-size: 12px !important;
+}
 body.single-product {
   /******** summary background ********/
   /******** Product summary ********/
@@ -5,6 +22,17 @@ body.single-product {
   /******** Product Gallery ********/
   /******** Taxonomies layout ********/
   /******** Related Products ********/
+}
+body.single-product h2.span {
+  line-height: 1.33;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+body.single-product h3.span {
+  margin-bottom: 20px;
+  line-height: 1.33;
+  letter-spacing: 3px;
+  text-transform: uppercase;
 }
 body.single-product .woocommerce-message {
   order: 0;
@@ -99,14 +127,14 @@ body.single-product .woocommerce-product-gallery img {
   max-width: 400px;
   width: 100%;
 }
-@media all and (min-width: 1281px) {
-  body.single-product .woocommerce-product-gallery img {
-    max-width: 300px;
-  }
-}
 @media all and (min-width: 769px) {
   body.single-product .woocommerce-product-gallery img {
     max-width: 400px;
+  }
+}
+@media all and (min-width: 1281px) {
+  body.single-product .woocommerce-product-gallery img {
+    max-width: 500px;
   }
 }
 body.single-product #custom-taxonomies {
@@ -136,6 +164,9 @@ body.single-product #custom-taxonomies:after {
   height: 200px;
   background-image: linear-gradient(to top, rgba(255, 255, 255, 0), #ffffff);
   z-index: 1;
+}
+body.single-product #custom-taxonomies .hl3 {
+  margin-bottom: 20px;
 }
 @media all and (min-width: 769px) {
   body.single-product #custom-taxonomies .custom-taxonomies-image {
@@ -337,6 +368,30 @@ body.woocommerce.archive .shop-header a {
 body.woocommerce.archive .shop-header a.active {
   font-weight: bold;
 }
+body.woocommerce.archive .trade-vibe {
+  position: relative;
+  background-image: url(../../../../assets/img/bali-background-4.jpg);
+  background-size: cover;
+  z-index: 1;
+}
+body.woocommerce.archive .trade-vibe:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  background-image: linear-gradient(to top, rgba(255, 255, 255, 0), #ffffff);
+}
+body.woocommerce.archive .trade-vibe:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
+}
 .em-product-tile-4:before {
   content: "";
   position: absolute;
@@ -353,6 +408,17 @@ body.woocommerce.archive .shop-header a.active {
 }
 .em-product-tile-4 .content {
   overflow: hidden;
+}
+.em-product-tile-4 .price {
+  text-align: center;
+  color: #FFF;
+  display: block;
+  font-size: 0.8em;
+}
+@media all and (min-width: 769px) {
+  .em-product-tile-4 .price {
+    font-size: 1em;
+  }
 }
 .em-product-tile-4 .flavor,
 .em-product-tile-4 .region {
