--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -23,6 +23,24 @@
 
 	body.woocommerce, 
 	body.woocommerce-page {
+		#em-wc-container {
+			.woocommerce-variation-availability {
+				display: none;
+			}
+
+			.woocommerce-variation-price {
+				margin-bottom: 20px;
+
+				.woocommerce-price-suffix {
+					font-size: 12px !important;
+					opacity: 0.8;
+
+					span {
+						font-size: 12px !important;
+					}
+				}
+			}
+		}
 	}
 
 /////////////////////////////////////////////////////////////////////////////////
@@ -30,6 +48,20 @@
 /////////////////////////////////////////////////////////////////////////////////
 
 	body.single-product {
+
+		h2.span {
+			line-height: 1.33;
+			letter-spacing: 3px;
+			text-transform: uppercase;
+		}
+
+		h3.span {
+			margin-bottom: 20px;
+			line-height: 1.33;
+			letter-spacing: 3px;
+			text-transform: uppercase;
+		}
+
 		.woocommerce-message {
 			order: 0;
 			margin-left: 30px;
@@ -147,16 +179,14 @@
 				max-width: 400px;
 				width: 100%;
 
-				@media all and (min-width: @breakpoint5_mf) {
-					max-width: 300px;
-				}
-
 				@media all and (min-width: @breakpoint3_mf) {
 					max-width: 400px;
 				}
 
+				@media all and (min-width: @breakpoint5_mf) {
+					max-width: 500px;
+				}
 			}
-
 		}
 
 		/******** Taxonomies layout ********/
@@ -188,6 +218,10 @@
 				height: 200px;
   				background-image: linear-gradient(to top, rgba(255, 255, 255, 0), #ffffff);
   				z-index: 1;
+			}
+
+			.hl3 {
+				margin-bottom: 20px;
 			}
 
 			.custom-taxonomies-image {
@@ -334,7 +368,35 @@
 				}
 			}
 		}
+
+		.trade-vibe {
+			position: relative;
+			background-image: url(../../../../assets/img/bali-background-4.jpg);
+			background-size: cover;
+			z-index: 1;
+
+			&:before {
+				content: "";
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 200px;
+				background-image: linear-gradient(to top, rgba(255, 255, 255, 0), #ffffff);
+			}
+
+			&:after {
+				content: "";
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				width: 100%;
+				height: 50px;
+				background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
+			}
+		}
 	}
+
 /////////////////////////////////////////////////////////////////////////////////
 // 11) PRODUCT TILE
 /////////////////////////////////////////////////////////////////////////////////
@@ -357,6 +419,17 @@
 
 		.content {
 			overflow: hidden;
+		}
+
+		.price {
+			text-align: center;
+			color: @white;
+			display: block;
+			font-size: .8em;
+
+			@media all and (min-width: @breakpoint3_mf) {
+				font-size: 1em;
+			}
 		}
 
 		.flavor,
