--- a/plugins/woocommerce/assets/css/style-wc-child.css
+++ b/plugins/woocommerce/assets/css/style-wc-child.css
@@ -24,15 +24,197 @@ body.single-product {
   /******** Related Products ********/
 }
 body.single-product h2.span {
+  font-size: 20px;
   line-height: 1.33;
   letter-spacing: 3px;
   text-transform: uppercase;
 }
+@media all and (min-width: 360px) and (max-width: 480px) {
+  body.single-product h2.span {
+    font-size: 24px;
+  }
+}
+@media all and (min-width: 480px) and (max-width: 768px) {
+  body.single-product h2.span {
+    font-size: 24px;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  body.single-product h2.span {
+    font-size: 28px;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+  body.single-product h2.span {
+    font-size: 28px;
+  }
+}
+@media all and (min-width: 1280px) and (max-width: 1468px) {
+  body.single-product h2.span {
+    font-size: 32px;
+  }
+}
+@media all and (min-width: 1468px) and (max-width: 1680px) {
+  body.single-product h2.span {
+    font-size: 32px;
+  }
+}
+@media all and (min-width: 1680px) and (max-width: 1920px) {
+  body.single-product h2.span {
+    font-size: 36px;
+  }
+}
+@media all and (min-width: 1920px) {
+  body.single-product h2.span {
+    font-size: 36px;
+  }
+}
+@media all and (min-width: 2200px) {
+  body.single-product h2.span {
+    font-size: 36px;
+  }
+}
+@media all and (min-width: 360px) and (max-width: 480px) {
+  body.single-product h2.span {
+    font-size: 24px;
+  }
+}
+@media all and (min-width: 480px) and (max-width: 768px) {
+  body.single-product h2.span {
+    font-size: 24px;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  body.single-product h2.span {
+    font-size: 28px;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+  body.single-product h2.span {
+    font-size: 28px;
+  }
+}
+@media all and (min-width: 1280px) and (max-width: 1468px) {
+  body.single-product h2.span {
+    font-size: 32px;
+  }
+}
+@media all and (min-width: 1468px) and (max-width: 1680px) {
+  body.single-product h2.span {
+    font-size: 32px;
+  }
+}
+@media all and (min-width: 1680px) and (max-width: 1920px) {
+  body.single-product h2.span {
+    font-size: 36px;
+  }
+}
+@media all and (min-width: 1920px) {
+  body.single-product h2.span {
+    font-size: 36px;
+  }
+}
+@media all and (min-width: 2200px) {
+  body.single-product h2.span {
+    font-size: 36px;
+  }
+}
 body.single-product h3.span {
+  font-size: 20px;
   margin-bottom: 20px;
   line-height: 1.33;
   letter-spacing: 3px;
   text-transform: uppercase;
+}
+@media all and (min-width: 360px) and (max-width: 480px) {
+  body.single-product h3.span {
+    font-size: 24px;
+  }
+}
+@media all and (min-width: 480px) and (max-width: 768px) {
+  body.single-product h3.span {
+    font-size: 24px;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  body.single-product h3.span {
+    font-size: 28px;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+  body.single-product h3.span {
+    font-size: 28px;
+  }
+}
+@media all and (min-width: 1280px) and (max-width: 1468px) {
+  body.single-product h3.span {
+    font-size: 32px;
+  }
+}
+@media all and (min-width: 1468px) and (max-width: 1680px) {
+  body.single-product h3.span {
+    font-size: 32px;
+  }
+}
+@media all and (min-width: 1680px) and (max-width: 1920px) {
+  body.single-product h3.span {
+    font-size: 36px;
+  }
+}
+@media all and (min-width: 1920px) {
+  body.single-product h3.span {
+    font-size: 36px;
+  }
+}
+@media all and (min-width: 2200px) {
+  body.single-product h3.span {
+    font-size: 36px;
+  }
+}
+@media all and (min-width: 360px) and (max-width: 480px) {
+  body.single-product h3.span {
+    font-size: 24px;
+  }
+}
+@media all and (min-width: 480px) and (max-width: 768px) {
+  body.single-product h3.span {
+    font-size: 24px;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 1024px) {
+  body.single-product h3.span {
+    font-size: 28px;
+  }
+}
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+  body.single-product h3.span {
+    font-size: 28px;
+  }
+}
+@media all and (min-width: 1280px) and (max-width: 1468px) {
+  body.single-product h3.span {
+    font-size: 32px;
+  }
+}
+@media all and (min-width: 1468px) and (max-width: 1680px) {
+  body.single-product h3.span {
+    font-size: 32px;
+  }
+}
+@media all and (min-width: 1680px) and (max-width: 1920px) {
+  body.single-product h3.span {
+    font-size: 36px;
+  }
+}
+@media all and (min-width: 1920px) {
+  body.single-product h3.span {
+    font-size: 36px;
+  }
+}
+@media all and (min-width: 2200px) {
+  body.single-product h3.span {
+    font-size: 36px;
+  }
 }
 body.single-product .woocommerce-message {
   order: 0;
@@ -54,7 +236,7 @@ body.single-product .custom-background {
 }
 @media all and (min-width: 769px) {
   body.single-product .custom-background {
-    height: 90%;
+    height: calc(100% - 100px);
   }
 }
 body.single-product .custom-background:before {
@@ -71,7 +253,7 @@ body.single-product .custom-background:before {
 }
 @media all and (min-width: 769px) {
   body.single-product .em-hero-simple:after {
-    bottom: 10%;
+    bottom: 50px;
   }
 }
 body.single-product .summary {
