--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -50,12 +50,14 @@
 	body.single-product {
 
 		h2.span {
+        	.font-size-responsive(20px,24px,28px,28px,32px,32px,36px,36px);
 			line-height: 1.33;
 			letter-spacing: 3px;
 			text-transform: uppercase;
 		}
 
 		h3.span {
+        	.font-size-responsive(20px,24px,28px,28px,32px,32px,36px,36px);
 			margin-bottom: 20px;
 			line-height: 1.33;
 			letter-spacing: 3px;
@@ -85,7 +87,7 @@
 			z-index: -10;
 
 			@media all and (min-width: @breakpoint3_mf) {
-				height: 90%;
+				height: calc( 100% - 100px);
 			}
 
 			&:before {
@@ -104,7 +106,7 @@
 
 		@media all and (min-width: @breakpoint3_mf) {
 			.em-hero-simple:after {
-				bottom: 10%;
+				bottom: 50px;
 			}
 		}
 
