--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -222,6 +222,12 @@
   				z-index: 1;
 			}
 
+			img {
+				width: auto;
+				height: auto;
+				max-height: 600px;
+			}
+
 			.hl3 {
 				margin-bottom: 20px;
 			}
@@ -241,6 +247,15 @@
 			}
 
 			.region {
+
+				figure {
+					position: relative;
+					z-index: 20;
+					top: 0;
+					left: 30px;
+					width: 80%;
+				}
+
 				.region-background {
 					position: absolute;
 					top: -60px;
@@ -260,16 +275,6 @@
             			background-size: 400px 400px;
 		  				background-repeat: repeat;
 					}
-				}
-
-				img {
-
-					position: relative;
-					top: 0%;
-					left: 30px;
-					width: 80%;
-					height: auto;
-					z-index: 20;
 				}
 			}
 
@@ -295,14 +300,13 @@
 					}
 				}
 
-				img {
 
+				figure {
 					position: relative;
-					top: 0;
-					left: 0%;
-					width: 80%;
-					height: auto;
 					z-index: 20;
+					top: 0;
+					left: 0;
+					width: 80%;
 				}
 			}
 
@@ -356,6 +360,7 @@
 	
 	body.woocommerce.archive {
 		.shop-header {
+			margin-top: 20px;
 			margin-bottom: 50px;
 
 			span {
