product not available on pdp and product tile

--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -171,6 +171,13 @@
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3000000', endColorstr='#0070b0e0',GradientType=1 ); /* IE6-9 */
 	}
 
+    .box-outline-white {
+        display: inline-block;
+        padding: 15px;
+        color: #FFF;
+        border: 1px solid #FFF;
+    }
+
 	.content-border {
 		padding-left: 20px;
 		margin-left: 20px;
