--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -16,6 +16,7 @@
 
     @import (reference) '../../../../../Eichmeister/assets/css/mixins.less';
     @import (reference) '../../../../../Eichmeister/assets/css/lib/flexgrid.less';
+    @import (reference) '../../../../assets/css/mixins.less';
 
 /////////////////////////////////////////////////////////////////////////////////
 // 2) GENERAL WOOCOMMERCE OVERRIDES
@@ -75,6 +76,10 @@
 			.em-wc-wrapper {
 				padding-top: 102px;
 			}
+		}
+
+		.em-wc-product-not-available {
+			.box-outline-white;
 		}
 
 		/******** summary background ********/
