--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -528,7 +528,11 @@
                 }
 
                 .trademark {
-                    display: none;
+                    width: 80px;
+                    height: 80px;
+                    position: absolute;
+                    bottom: 15px;
+                    left: 15px;
 
                     @media all and (min-width: @breakpoint3_mf) {
                         position: absolute;
