--- a/assets/css/style-lp-1.less
+++ b/assets/css/style-lp-1.less
@@ -116,7 +116,10 @@
 		}
 
 		.hero-teaser {
-			display: none;
+
+			.hero-teaser-link {
+				display: none;
+			}
 
 			@media all and (min-width: @breakpoint4_mf) {
 				display: block;
@@ -152,6 +155,17 @@
 					height: 600px;
 				}
 			}
+		}
+	}
+
+////////////////////////////////////////////////////////////////////////////////////
+// TEASER SECTION
+////////////////////////////////////////////////////////////////////////////////////
+
+	#teaser1 {
+		
+		.em-content-repeater {
+			padding-top: 0;
 		}
 	}
 
