fixed cart and checkout style fixed product-tile-4 buttons

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -386,7 +386,11 @@
         &.woocommerce-cart,
         &.woocommerce-checkout {
             .woocommerce {
-                padding-top: 32px !important;
+                padding-top: 50px;
+
+                .return-to-shop {
+                    padding-bottom: 10px;
+                }
             }
         }
     }
