--- a/plugins/woocommerce/assets/css/style-wc-child.less
+++ b/plugins/woocommerce/assets/css/style-wc-child.less
@@ -484,11 +484,16 @@
 		.more-information {
 			position: absolute;
 			top: 200%;
-			left: 50%;
-			transform: translate( -50%, 0 );
-			width: fit-content;
+			left: 0;
+			width: 100%;
+			transform: translate( 0, 0 );
 			-webkit-transition: all .6s ease;
 			transition: all .6s ease;
+			text-align: center;
+
+			.btn {
+				display: inline-block;
+			}
 		}
 
 		.wrapper {
@@ -508,7 +513,7 @@
 
 			.more-information {
 				top: 50%;
-				transform: translate( -50% , -50% );
+				transform: translate( 0 , -50% );
 			}
 		}
 	}
